fix a style that overlaps with Scheduler styles

--- a/packages/devextreme-cli/src/templates/react/application/src/components/header/Header.scss
+++ b/packages/devextreme-cli/src/templates/react/application/src/components/header/Header.scss
@@ -30,7 +30,7 @@ header {
 }
 
 .dx-theme-generic {
-  .dx-toolbar {
+  .header-toolbar {
     padding: 10px 0;
   }
 
